--- a/package.json
+++ b/package.json
@@ -110,12 +110,12 @@
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^6.4.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "history": "^2.0.0",
     "json-loader": "^0.5.2",
     "npm-run-all": "^1.7.0",
-    "phenomic": "^0.20.3",
+    "phenomic": "^0.21.2",
     "postcss-browser-reporter": "^0.4.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.13.0",
@@ -133,10 +133,11 @@
     "style-loader": "^0.13.0",
     "stylelint": "^7.2.0",
     "warning": "^3.0.0",
-    "webpack": "^1.11.0",
+    "webpack": "^2.3.0",
     "whatwg-fetch": "^0.11.0"
   },
   "dependencies": {
+    "css-emojis": "^0.1.0",
     "normalize.css": "^5.0.0",
     "react-disqus-thread": "^0.4.0",
     "react-easter": "^1.0.6",
